# softy

./: README.md  pyproject.toml
.github/workflows/: pypi.yml
softy/: __init__.py
tests/: test_softy.py
