[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "softy"
version = "0.0.4"
authors = [
    { name="Jack Muskopf", email="jam.muskopf@gmail.com" },
]
description = "Python Softy"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/jackmuskopf/softy"
"Bug Tracker" = "https://github.com/jackmuskopf/softy/issues"